[package]
name = "omp-launcher"
version = "1.4.0"
description = "Open Multiplayer Launcher"
authors = ["Amyr Ahmady (iAmir)"]
license = ""
repository = "https://github.com/openmultiplayer/launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1", features = [] }

[dependencies]
tauri = { version = "=1", features = [ "fs-all", "path-all", "macos-private-api", "process-all", "window-all", "dialog-all", "os-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
byteorder = "1"
chardet = "0.2"
chardetng = "0.1"
encoding_rs = "0.8"
dirs-next = "2"
discord-rich-presence = "0.2"
regex = "1"
runas = "1"
sysinfo = "=0.30"
simple-logging = "2"
log = "0.4"
charset-normalizer-rs = "1"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sevenz-rust = "0.6"
md5 = "0.7"
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
winapi = "0.3"
tauri-plugin-deep-link = "=0.1"
gumdrop = "0.8"
lazy_static = "1"

[target.'cfg(target_os = "windows")'.dependencies]
dll-syringe = "0.15"
winreg = "0.52"

[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true