[package]
name = "omp-launcher"
version = "1.5.2"
description = "Open Multiplayer Launcher"
authors = ["Amyr Ahmady (iAmir)"]
license = ""
repository = "https://github.com/openmultiplayer/launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8.3", features = [ "clipboard-all", "fs-all", "path-all", "macos-private-api", "process-all", "window-all", "dialog-all", "os-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
byteorder = "1.5.0"
chardet = "0.2.4"
chardetng = "0.1.17"
encoding_rs = "0.8.34"
dirs-next = "2.0.0"
regex = "1.10.5"
runas = "1.2.0"
sysinfo = "0.30.13"
simple-logging = "2.0.2"
log = "0.4.22"
charset-normalizer-rs = "1.0.6"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sevenz-rust = "0.6.1"
md5 = "0.7.0"
actix-web = "4.8.0"
actix-rt = "2.10.0"
actix-cors = "0.7.0"
winapi = "0.3.9"
gumdrop = "0.8.1"
lazy_static = "1.5.0"
dirs = "5.0.1"
once_cell = "1.19.0"
tauri-utils = { version = "1" }

[target.'cfg(windows)'.dependencies]
interprocess = { version = "1.2.1", default-features = false }
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52.0"
dll-syringe = "0.15.2"
windows = { version = "0.39.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI",
    "Win32_Web",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage"
] }
webview2-com = "0.19.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
